fix: simplify stickiness implementation, avoid footer going over scrollbar

--- a/src/drawer/styles.scss
+++ b/src/drawer/styles.scss
@@ -16,6 +16,18 @@
 .drawer {
   @include styles.styles-reset;
   word-wrap: break-word;
+
+  &.with-footer {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    block-size: fit-content;
+    min-block-size: 100%;
+  }
+
+  > .content {
+    flex: 1;
+  }
 }
 
 .header {
@@ -77,19 +89,13 @@
   /* used in test-utils */
 }
 
-.footer-wrapper {
-  position: absolute;
+.footer {
+  position: sticky;
   inset-block-end: 0;
   inset-inline-start: 0;
   inset-inline-end: 0;
   background-color: awsui.$color-background-container-content;
-
-  > .footer {
-    border-block-start: awsui.$border-divider-section-width solid awsui.$color-border-panel-header;
-    border-block-end: awsui.$border-divider-section-width solid awsui.$color-border-panel-header;
-    border-inline-start: awsui.$border-divider-section-width solid awsui.$color-border-panel-header;
-    border-inline-end: awsui.$border-divider-section-width solid awsui.$color-border-panel-header;
-    padding-block: awsui.$space-panel-content-top;
-    padding-inline: awsui.$space-panel-side-left awsui.$space-panel-side-right;
-  }
+  border-block-start: awsui.$border-divider-section-width solid awsui.$color-border-panel-header;
+  padding-block: awsui.$space-panel-content-top;
+  padding-inline: awsui.$space-panel-side-left awsui.$space-panel-side-right;
 }
